fix main navigation links overflow

--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ header {
 
 #right-icons {
   justify-content: right;
-  gap: 32px;
+  gap: 5%;
   list-style-type: none;
   margin-left: auto;
 }
@@ -75,7 +75,7 @@ footer a {
   color: #4c4c4c;
 }
 
-/* Navigation Menu */
+/* Main Navigation Menu */
 
 .menu-btn {
   justify-content: left;
@@ -252,32 +252,6 @@ nav li {
   margin: 8px;
 }
 
-@media (max-width: 768px) {
-  .categories {
-    flex-direction: row;
-    width: 100%;
-    height: 132px;
-    justify-content: center;
-    align-items: center;
-    gap: 5%;
-    padding: 0;
-  }
-
-  .products-page main {
-    flex-direction: column;
-  }
-
-  .products {
-    grid-template-columns: repeat(auto-fill, minmax(90%, 90%));
-    column-gap: 55px;
-  }
-
-  .product {
-    width: 70%;
-    height: auto;
-  }
-}
-
 /* Contact Us */
 
 #contact {
@@ -348,4 +322,52 @@ nav li {
 #submit:hover {
   background-color: #5c5c5c;
   cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .menu-btn {
+    margin-right: 8px;
+  }
+
+  #logo {
+    font-size: 24px;
+  }
+
+  .categories {
+    flex-direction: row;
+    width: 100%;
+    height: 132px;
+    justify-content: center;
+    align-items: center;
+    gap: 5%;
+    padding: 0;
+    font-size: 95%;
+  }
+
+  .products-page main {
+    flex-direction: column;
+  }
+
+  .products {
+    grid-template-columns: repeat(auto-fill, minmax(70%, 70%));
+    row-gap: 42px;
+    margin-bottom: 35px;
+  }
+
+  .product {
+    width: 70%;
+    height: auto;
+  }
+
+  .products-page .product {
+    width: 100%;
+  }
+
+  .product-name {
+    font-size: 95%;
+  }
+
+  .carousel-cell {
+    height: 400px;
+  }
 }
